# vala-template

./: .gitignore  README.md  co.tauos.ValaTemplate.Devel.json  co.tauos.ValaTemplate.json  meson.build
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: flatpak.yml
data/: co.tauos.ValaTemplate.appdata.xml.in  co.tauos.ValaTemplate.desktop.in  co.tauos.ValaTemplate.gresource.xml  co.tauos.ValaTemplate.gschema.xml  gresource.xml.in  meson.build
data/icons/: meson.build
data/ui/: mainwindow.blp  mainwindow.ui  meson.build
po/: LINGUAS  POTFILES  ar.po  com.fyralabs.ValaTemplate.pot  cs.po  de.po  en_owo.po  es.po  fi.po  fr.po  id.po  it.po  ja.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  th.po  tr.po  vi.po  yue.po  zh_Hans.po  zh_Hant.po
src/: Application.vala  Config.vapi  MainWindow.vala  meson.build
